--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
     padding: 0;
     background-color: rgb(39, 37, 37);
     align-items: center;
+    
 }
 .nav{
     position: fixed;
@@ -12,7 +13,10 @@ body{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 100%;
+    height: 12%;
     align-items: center;
+    justify-content: space-between;
+    
 }
 .nameLogo{
     padding-left: 10px;
@@ -26,13 +30,16 @@ a{
 .table_primary_nav{
     list-style: none;
     overflow: hidden;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
 
 }
 .nav_tap{
-    float: left;
-    display: block;
+    display: inline;
     text-align: center;
     padding: 15px;
+}
+.nav_tap a:hover{
+    color: red;
 }
 
 .list_nav{
@@ -53,24 +60,26 @@ a{
 .trailers_nav{
     padding: 16px;
     margin-top: 70px;
-    background-color: rgb(238, 31, 31);
-    height: 90px;
+    background-color: red;
+    width: 100%;
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 35px;
+}
+.nav_element{
+   position: relative;
+    margin-right:45px ;
 }
 .trailers_cont{
-    /* display: flex; */
-    background-color: white;
-    margin-top:1%;
-    align-items: center;
-    padding-bottom: 20px;
-    padding-left: 5%;
+    display: block;
+    background-color: rgb(27, 23, 23);
+    padding-bottom: 5%;
+    height: auto;
 }
 .trailers_movie{
     overflow: hidden;
-    padding-right: 1%;
+    padding-left:3% ;
     /* display: inline; */
 }
 .trailers_movie ul{
@@ -78,8 +87,27 @@ a{
 }
 .movie{
     float: left;
-    /* padding-left:10px ; */
+    background-color: rgb(10, 5, 5);
+    margin: 2px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    height: auto;
+    padding-bottom: 10px;
+    font-size: 10px;
 }
+.movie-link{
+    text-align: left;
+}
+.movie-link ul{
+    padding: 5px;
+    color: white;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.movie-link a{
+    padding-left:64px ;
+    padding-bottom: 15px;
+}
+
 #namemovie{
 padding-left: 10px;
 font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -91,18 +119,17 @@ color: brown;
     transition: 0.2s;
 }
 .movie-img:hover{
-    height: 215px;
-    width: 170px;
+    transform: scale(1.1) ;
 }
 .trailers_series{
     overflow: hidden;
+    padding-left:3% ;
 }
 .trailers_series ul{
     list-style: none;
 }
 .series{
     float: left;
-    /* padding-left:10px ; */
 }
 .series-img{
     width: 150px;
@@ -110,8 +137,7 @@ color: brown;
     transition: 0.2s;
 }
 .series-img:hover{
-    height: 215px;
-    width: 170px;
+    transform: scale(1.1) ;
 }
 .footer-pg{
     text-align: center;
@@ -120,4 +146,26 @@ color: brown;
 
 .footer-pg ul{
     list-style: none;
+}
+
+.button-ver{
+    width: 21mm;
+    height: 4mm;
+    font-size: 3mm;
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(194, 14, 14);
+    color: rgb(233, 222, 222);
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
+}
+.button-ver:hover{
+    background-color: white;
+    color: red;
+}
+.material-symbols-outlined:hover{
+    color: red;
+    cursor: pointer;
+}
+strong:hover{
+    color: yellow;
 }
