--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,6 @@ a{
     padding-left: 10px;
 }
 .trailers_nav{
-    padding: 16px;
     margin-top: 70px;
     background-color: red;
     width: 100%;
@@ -66,16 +65,17 @@ a{
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
     padding-top: 35px;
+    padding-bottom: 35px;
 }
 .nav_element{
    position: relative;
     margin-right:45px ;
 }
 .trailers_cont{
-    display: block;
+    /* display: block; */
     background-color: rgb(27, 23, 23);
     padding-bottom: 5%;
-    height: auto;
+    width: 100%;
 }
 .trailers_movie{
     overflow: hidden;
@@ -94,6 +94,8 @@ a{
     height: auto;
     padding-bottom: 10px;
     font-size: 10px;
+    max-width: 150px;
+    width: auto;
 }
 .movie-link{
     text-align: left;
@@ -102,6 +104,15 @@ a{
     padding: 5px;
     color: white;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.series-link ul{
+    padding: 5px;
+    color: white;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.series-link a{
+    padding-left:64px ;
+    padding-bottom: 15px;
 }
 .movie-link a{
     padding-left:64px ;
@@ -130,6 +141,15 @@ color: brown;
 }
 .series{
     float: left;
+    background-color: rgb(10, 5, 5);
+    margin: 2px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    height: auto;
+    padding-bottom: 10px;
+    font-size: 10px;
+    max-width: 150px;
+    width: auto;
 }
 .series-img{
     width: 150px;
