--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,14 @@ a{
 }
 .table_primary_nav{
     list-style: none;
-    overflow: hidden;
+    display: inline;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
-
+    padding-left: 0;
 }
 .nav_tap{
     display: inline;
     text-align: center;
-    padding: 15px;
+    padding: 10px;
 }
 .nav_tap a:hover{
     color: red;
