--- a/Client/Trailers/src/app/app.component.html
+++ b/Client/Trailers/src/app/app.component.html
@@ -18,16 +18,15 @@
       <div class="nav_element">
           <ul>
               <li>
-                  <a href="#" class="profile">
-                      <button class="material-symbols-outlined" id="abrir-login">
-                          badge
-                      </button>
-                  </a>
+                <button class="material-symbols-outlined" id="abrir-login" (click)="enviar()">
+                  badge
+                </button>
               </li>
           </ul>
       </div>
   </div>
 </div>
+
 
 
 <router-outlet></router-outlet>
